{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 17,
  "lineage": "c028595e-e3a2-f3e9-4c49-d3ec72eb69a2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_master",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkInterfaces/nic_master",
            "ip_configuration": [
              {
                "name": "nic_masterconfig",
                "primary": true,
                "private_ip_address": "10.0.1.70",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/virtualNetworks/vnet_pic/subnets/subnet_pic"
              }
            ],
            "location": "francecentral",
            "name": "nic_master",
            "private_ip_address": "10.0.1.70",
            "private_ip_addresses": [
              "10.0.1.70"
            ],
            "resource_group_name": "projetfinal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_proxy",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkInterfaces/nic_proxy",
            "ip_configuration": [
              {
                "name": "nic_proxyconfig",
                "primary": true,
                "private_ip_address": "10.0.1.90",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/publicIPAddresses/ip_proxy",
                "subnet_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/virtualNetworks/vnet_pic/subnets/subnet_pic"
              }
            ],
            "location": "francecentral",
            "name": "nic_proxy",
            "private_ip_address": "10.0.1.90",
            "private_ip_addresses": [
              "10.0.1.90"
            ],
            "resource_group_name": "projetfinal"
          },
          "dependencies": [
            "azurerm_public_ip.pub_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_slave",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkInterfaces/nic_slave",
            "ip_configuration": [
              {
                "name": "nic_slaveconfig",
                "primary": true,
                "private_ip_address": "10.0.1.80",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/virtualNetworks/vnet_pic/subnets/subnet_pic"
              }
            ],
            "location": "francecentral",
            "name": "nic_slave",
            "private_ip_address": "10.0.1.80",
            "private_ip_addresses": [
              "10.0.1.80"
            ],
            "resource_group_name": "projetfinal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "master_link",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkInterfaces/nic_master|/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkSecurityGroups/nsgmaster",
            "network_interface_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkInterfaces/nic_master",
            "network_security_group_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkSecurityGroups/nsgmaster"
          },
          "dependencies": [
            "azurerm_network_interface.nic_master",
            "azurerm_network_security_group.nsgmaster",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "proxy_link",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkInterfaces/nic_proxy|/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkSecurityGroups/nsgproxy",
            "network_interface_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkInterfaces/nic_proxy",
            "network_security_group_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkSecurityGroups/nsgproxy"
          },
          "dependencies": [
            "azurerm_network_interface.nic_proxy",
            "azurerm_network_security_group.nsgproxy",
            "azurerm_public_ip.pub_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "slave_link",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkInterfaces/nic_slave|/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkSecurityGroups/nsgslave",
            "network_interface_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkInterfaces/nic_slave",
            "network_security_group_id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkSecurityGroups/nsgslave"
          },
          "dependencies": [
            "azurerm_network_interface.nic_slave",
            "azurerm_network_security_group.nsgslave",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgmaster",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkSecurityGroups/nsgmaster",
            "location": "francecentral",
            "name": "nsgmaster",
            "resource_group_name": "projetfinal",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Jenkins",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgproxy",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkSecurityGroups/nsgproxy",
            "location": "francecentral",
            "name": "nsgproxy",
            "resource_group_name": "projetfinal",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgslave",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/networkSecurityGroups/nsgslave",
            "location": "francecentral",
            "name": "nsgslave",
            "resource_group_name": "projetfinal",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Docker_engine",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pub_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "proxypic",
            "fqdn": "proxypic.francecentral.cloudapp.azure.com",
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/publicIPAddresses/ip_proxy",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.89.178.118",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "ip_proxy",
            "resource_group_name": "projetfinal",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/virtualNetworks/vnet_pic/subnets/subnet_pic",
            "name": "subnet_pic",
            "resource_group_name": "projetfinal",
            "virtual_network_name": "vnet_pic"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/da011f30-0e36-42ae-953f-f151630d44c1/resourceGroups/projetfinal/providers/Microsoft.Network/virtualNetworks/vnet_pic",
            "location": "francecentral",
            "name": "vnet_pic",
            "resource_group_name": "projetfinal"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}